fixed admin navbar collapse width

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -2,8 +2,6 @@
 body {
   padding-left: 20px !important;
   padding-right: 20px !important;
- 
-  height: 100% !important;
   padding-bottom: 0px;
   margin-bottom: 0px;
 }
@@ -149,3 +147,44 @@ select.column-picker {
 body {
   min-width: 240px;
 }
+
+body {
+	padding-top:70px;
+}
+
+@media (max-width: 830px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	  }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+		margin-top: 7.5px;
+	  }
+	  .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+  		display:block !important;
+	  }
+  }
